# rdv-systeme-oscilloscope-numerique

./: .gitignore  README.md
doc/: rdv-systeme-oscilloscope-numerique.docx
v01/OscilloscopeGUI/: OscilloscopeGUI.sln
v01/OscilloscopeGUI/OscilloscopeGUI/: FrmMain.Designer.cs  FrmMain.cs  FrmMain.resx  Oscilloscope.cs  OscilloscopeGUI.csproj  Program.cs
v02/OscilloscopeLIB/: OscilloscopeLIB.sln
v02/OscilloscopeLIB/OscilloscopeLIB/: Channel.cs  Oscilloscope.cs  OscilloscopeLIB.csproj
v03/: CMakeLists.txt  DSettings.cpp  DSettings.h  IoDevice.cpp  IoDevice.h  MainWindow.cpp  MainWindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
v03/build-cmd/: commands.mak  make.sh
v03/parser/: ParseConnection.cpp  ParseConnection.h
v03/scope/: DScopesQT.cpp  DScopesQT.h  DScopesQTWidget.cpp  DScopesQTWidget.h  Scopes.cpp  Scopes.h
